immplementacion v7
