# src/main/java/com/prueba/gestionbanca/expose/request/MovementRequest.java
@@ -1,6 +1,5 @@
 package com.prueba.gestionbanca.expose.request;
 
-import java.io.Serializable;
 import java.math.BigDecimal;
 import lombok.AllArgsConstructor;
 import lombok.Data;
@@ -8,17 +7,15 @@ import lombok.NoArgsConstructor;
 
 /**
  * .
- * WithdrawalRequest
+ * DepositRequest
  */
 @SuppressWarnings("unchecked")
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
-public class WithdrawalRequest implements Serializable {
+public class MovementRequest {
 
   private static final long serialVersionUID = 1L;
-
-  private String typeAccount;
 
   private String numberAccount;
 
