# src/main/java/com/prueba/gestionbanca/expose/response/AccountOperationResponse.java
@@ -2,6 +2,7 @@ package com.prueba.gestionbanca.expose.response;
 
 import java.math.BigDecimal;
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
@@ -14,14 +15,15 @@ import lombok.NoArgsConstructor;
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
+@Builder
 public class AccountOperationResponse {
-    private String numberOperation;
+  private String numberOperation;
 
-    private String typeAccount;
+  private String typeAccount;
 
-    private String card;
+  private String card;
 
-    private String number;
+  private String number;
 
-    private BigDecimal balance;
+  private BigDecimal balance;
 }
