# src/main/java/com/prueba/gestionbanca/util/EnumPayType.java
@@ -1,19 +1,0 @@
-package com.prueba.gestionbanca.util;
-
-/**
- * <b>Enum</b>: EnumPayType <br/>
- *
- * <u>Service Provider</u>: PruebaTest <br/>
- * <u>Developed by</u>: Diego Condezo <br/>
- * <u>Changes:</u><br/>
- * <ul>
- *   <li>
- *     Enero 22, 2024 Creación de Clase.
- *   </li>
- * </ul>
- */
-public enum EnumPayType {
-    PAGO_MINIMO,
-    PAGO_TOTAL,
-    ABONO
-}
